--- a/resources/view/Main.fxml
+++ b/resources/view/Main.fxml
@@ -3,17 +3,16 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.control.TreeView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -23,8 +22,6 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.web.WebView?>
 <?import org.controlsfx.control.CheckComboBox?>
 
 <BorderPane fx:id="canvas" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="500.0" minWidth="750.0" prefHeight="500.0" prefWidth="750.0" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MainController">
@@ -40,30 +37,30 @@
 			<children>
 				<MenuBar minWidth="162.0" prefHeight="24.0" prefWidth="162.0">
 					<menus>
-						<Menu mnemonicParsing="false" text="%menu.file">
+						<Menu text="%menu.file">
 							<items>
-								<MenuItem fx:id="MIChangeCourse" mnemonicParsing="false" onAction="#changeCourse" text="%menu.changesubject" />
-								<MenuItem fx:id="updateCourse" mnemonicParsing="false" onAction="#updateCourse" text="%menu.update" />
-								<MenuItem fx:id="MISaveChart" mnemonicParsing="false" onAction="#saveChart" text="%menu.savechart" />
-								<MenuItem fx:id="MIExportCSV" mnemonicParsing="false" onAction="#exportCSV" text="%menu.exportcsv" />
-								<MenuItem fx:id="MILogOut" mnemonicParsing="false" onAction="#logOut" text="%menu.logout" />
-								<MenuItem fx:id="MIExit" mnemonicParsing="false" onAction="#closeApplication" text="%menu.exit">
+								<MenuItem fx:id="MIChangeCourse" onAction="#changeCourse" text="%menu.changesubject" />
+								<MenuItem fx:id="updateCourse" onAction="#updateCourse" text="%menu.update" />
+								<MenuItem fx:id="MISaveChart" onAction="#saveChart" text="%menu.savechart" />
+								<MenuItem fx:id="MIExportCSV" onAction="#exportCSV" text="%menu.exportcsv" />
+								<MenuItem fx:id="MILogOut" onAction="#logOut" text="%menu.logout" />
+								<MenuItem fx:id="MIExit" onAction="#closeApplication" text="%menu.exit">
                            <accelerator>
                               <KeyCodeCombination alt="DOWN" code="F4" control="UP" meta="UP" shift="UP" shortcut="UP" />
                            </accelerator></MenuItem>
 							</items>
 						</Menu>
-						<Menu mnemonicParsing="false" text="%menu.edit">
+						<Menu text="%menu.edit">
 							<items>
-								<MenuItem fx:id="MIClearSelection" mnemonicParsing="false" onAction="#clearSelection" text="%menu.clearselection" />
-                        <MenuItem fx:id="menuChangeConfig" mnemonicParsing="false" onAction="#changeConfiguration" text="%menu.changeconfig" />
-                        <MenuItem fx:id="importConfiguration" mnemonicParsing="false" onAction="#importConfiguration" text="%menu.importconfig" />
-                        <MenuItem fx:id="menuExportConfiguration" mnemonicParsing="false" onAction="#exportConfiguration" text="%menu.exportconfig" />
+								<MenuItem fx:id="MIClearSelection" onAction="#clearSelection" text="%menu.clearselection" />
+                        <MenuItem fx:id="menuChangeConfig" onAction="#changeConfiguration" text="%menu.changeconfig" />
+                        <MenuItem fx:id="importConfiguration" onAction="#importConfiguration" text="%menu.importconfig" />
+                        <MenuItem fx:id="menuExportConfiguration" onAction="#exportConfiguration" text="%menu.exportconfig" />
 							</items>
 						</Menu>
 						<Menu mnemonicParsing="false" text="%menu.help">
 							<items>
-								<MenuItem fx:id="MIAboutUBUGrades" mnemonicParsing="false" onAction="#aboutApp" text="%menu.about" />
+								<MenuItem fx:id="MIAboutUBUGrades" onAction="#aboutApp" text="%menu.about" />
 							</items>
 						</Menu>
 					</menus>
@@ -124,7 +121,20 @@
                                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                 </rowConstraints>
                                  <children>
-												<Label fx:id="lblCountParticipants" text="%label.participants" GridPane.hgrow="NEVER" />
+												<Label fx:id="lblCountParticipants" GridPane.hgrow="NEVER">
+                                       <graphic>
+                                          <ImageView pickOnBounds="true" preserveRatio="true">
+                                             <image>
+                                                <Image url="@../img/groups.png" />
+                                             </image>
+                                          </ImageView>
+                                       </graphic>
+                                       <GridPane.margin>
+                                          <Insets left="5.0" />
+                                       </GridPane.margin>
+                                       <tooltip>
+                                          <Tooltip text="%label.participants" />
+                                       </tooltip></Label>
 												<TextField fx:id="tfdParticipants" promptText="%label.filter" GridPane.hgrow="NEVER" GridPane.rowIndex="1" />
 												<Label text="%label.group" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
 												<Label text="%label.rol" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
@@ -222,8 +232,8 @@
 																			<children>
 																				<TextField fx:id="courseModuleTextField" layoutX="6.0" layoutY="28.0" prefHeight="28.0" prefWidth="108.0" promptText="%label.filter" />
                                                             <CheckBox fx:id="checkBoxCourseModule" layoutX="140.0" layoutY="5.0" mnemonicParsing="false" text="%label.withhidden" />
-                                                            <ChoiceBox fx:id="choiceBoxCourseModule" layoutX="140.0" layoutY="30.0" prefHeight="24.0" prefWidth="88.0" />
                                                             <CheckBox fx:id="checkBoxActivityCompleted" layoutX="5.0" layoutY="5.0" mnemonicParsing="false" text="%label.withcompletion" />
+                                                            <CheckComboBox fx:id="checkComboBoxCourseModule" layoutX="140.0" layoutY="28.0" prefHeight="31.0" prefWidth="108.0" />
 																			</children>
 																		</Pane>
 																	</top>
@@ -268,7 +278,7 @@
 																			<children>
 																				<TextField fx:id="activityTextField" layoutX="6.0" layoutY="28.0" prefHeight="28.0" prefWidth="108.0" promptText="%label.filter" />
                                                             <CheckBox fx:id="checkBoxActivity" layoutX="140.0" layoutY="5.0" mnemonicParsing="false" text="%label.withhidden" />
-                                                            <ChoiceBox fx:id="choiceBoxActivity" layoutX="140.0" layoutY="30.0" prefHeight="24.0" prefWidth="88.0" />
+                                                <CheckComboBox fx:id="checkComboBoxModuleType" layoutX="139.0" layoutY="28.0" prefHeight="31.0" prefWidth="108.0" />
 																			</children>
 																		</Pane>
 																	</top>
@@ -282,67 +292,17 @@
 					</center>
 				</BorderPane>
 				<BorderPane prefHeight="200.0" prefWidth="200.0">
-					<bottom>
-						<GridPane fx:id="optionsUbuLogs" prefHeight="98.0" prefWidth="490.0" BorderPane.alignment="CENTER">
-							<columnConstraints>
-								<ColumnConstraints hgrow="SOMETIMES" maxWidth="262.0" minWidth="10.0" prefWidth="227.0" />
-								<ColumnConstraints hgrow="SOMETIMES" maxWidth="262.0" minWidth="10.0" prefWidth="227.0" />
-								<ColumnConstraints hgrow="SOMETIMES" maxWidth="262.0" minWidth="10.0" prefWidth="227.0" />
-								<ColumnConstraints hgrow="SOMETIMES" maxWidth="262.0" minWidth="10.0" prefWidth="227.0" />
-							</columnConstraints>
-							<rowConstraints>
-								<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-								<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-								<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-								<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-								<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-							</rowConstraints>
-							<children>
-								<ChoiceBox fx:id="choiceBoxDate" prefWidth="100.0" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="3" />
-								<Label text="%label.groupbydate" GridPane.halignment="RIGHT" GridPane.rowIndex="3" />
-								<Label text="%label.setMax" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
-								<TextField fx:id="textFieldMax" maxWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <GridPane fx:id="dateGridPane" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.rowIndex="1" GridPane.rowSpan="3">
-                          <columnConstraints>
-                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                          </columnConstraints>
-                          <rowConstraints>
-                            <RowConstraints maxHeight="104.0" minHeight="10.0" prefHeight="104.0" vgrow="SOMETIMES" />
-                            <RowConstraints maxHeight="120.0" minHeight="10.0" prefHeight="120.0" vgrow="SOMETIMES" />
-                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                          </rowConstraints>
-                           <children>
-      								<Label text="%label.startdate" GridPane.halignment="RIGHT" />
-      								<DatePicker fx:id="datePickerStart" editable="false" showWeekNumbers="true" GridPane.columnIndex="1" />
-      								<Label text="%label.enddate" GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
-      								<DatePicker fx:id="datePickerEnd" editable="false" showWeekNumbers="true" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                           </children>
-                        </GridPane>
-							</children>
-							<BorderPane.margin>
-								<Insets />
-							</BorderPane.margin>
-						</GridPane>
-					</bottom>
                <center>
-                  <StackPane prefHeight="150.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-                     <children>
-      						<WebView fx:id="webViewCharts" minHeight="200.0" minWidth="200.0" prefHeight="200.0" prefWidth="200.0" />
-                        <BorderPane fx:id="borderPaneImage" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: white;">
-                           <center>
-                              <ImageView pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
-                                 <image>
-                                    <Image url="@../img/logo.png" />
-                                 </image>
-                              </ImageView>
-                           </center>
-                           <bottom>
-                              <ProgressBar fx:id="progressBar" prefHeight="35.0" prefWidth="200.0" progress="0.0" BorderPane.alignment="TOP_CENTER" />
-                           </bottom>
-                        </BorderPane>
-                     </children>
-                  </StackPane>
+                  <TabPane fx:id="webViewTabPane" prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
+                    <tabs>
+                      <Tab fx:id="visualizationTab" closable="false" text="%tab.visualization">
+                  
+                           <fx:include fx:id="visualization" source="Visualization.fxml" />
+                         
+                      </Tab>
+                  
+                    </tabs>
+                  </TabPane>
                </center>
 				</BorderPane>
 			</items>
