--- a/src/main/resources/view/Clustering.fxml
+++ b/src/main/resources/view/Clustering.fxml
@@ -18,7 +18,7 @@
 <?import org.controlsfx.control.CheckComboBox?>
 <?import org.controlsfx.control.PropertySheet?>
 
-<BorderPane prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="clustering.controller.ClusteringController">
+<BorderPane prefHeight="800.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="es.ubu.lsi.ubumonitor.clustering.controller.ClusteringController">
    <top>
       <GridPane BorderPane.alignment="CENTER">
         <columnConstraints>
