--- a/src/main/resources/view/Menu.fxml
+++ b/src/main/resources/view/Menu.fxml
@@ -27,7 +27,13 @@
                   <MenuItem fx:id="MIChangeCourse" onAction="#changeCourse" text="%menu.changesubject" />
                   <MenuItem fx:id="updateCourse" onAction="#updateCourse" text="%menu.update" />
                   <MenuItem fx:id="MIExportCSV" onAction="#exportCSV" text="%menu.exportcsv" />
-                  <MenuItem mnemonicParsing="false" onAction="#exportEnrolledUsersPhoto" text="%menu.exportphotos" />
+                  <Menu text="%menu.photos">
+                     <items>
+                        <MenuItem mnemonicParsing="false" onAction="#exportUserPhoto" text="%menu.exportphotos" />
+                        <MenuItem mnemonicParsing="false" onAction="#exportDefaultPhoto" text="%menu.exportdefaultphotos" />
+                     </items>
+                  </Menu>
+                  <MenuItem fx:id="exportDashboard" onAction="#exportDashboard" text="%menu.exportdashboard" />
                   <MenuItem fx:id="MILogOut" onAction="#logOut" text="%menu.logout" />
                   <MenuItem fx:id="MIExit" onAction="#closeApplication" text="%menu.exit">
                      <accelerator>
