--- a/src/main/resources/view/Welcome.fxml
+++ b/src/main/resources/view/Welcome.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ProgressBar?>
@@ -170,5 +171,6 @@
             <Font size="22.0" />
          </font>
       </Label>
+      <Hyperlink layoutX="5.0" layoutY="15.0" onAction="#aboutApp" text="%about_app" />
 	</children>
 </AnchorPane>
