--- a/src/main/resources/view/WelcomeOffline.fxml
+++ b/src/main/resources/view/WelcomeOffline.fxml
@@ -3,6 +3,7 @@
 <?import java.lang.String?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Tab?>
@@ -102,5 +103,6 @@
             <Cursor fx:constant="DEFAULT" />
          </cursor>
       </GridPane>
+      <Hyperlink layoutX="5.0" layoutY="15.0" onAction="#aboutApp" text="%about_app" />
 	</children>
 </AnchorPane>
