--- a/src/main/resources/view/UserInfo.fxml
+++ b/src/main/resources/view/UserInfo.fxml
@@ -11,6 +11,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
@@ -57,47 +58,6 @@
          </children>
       </GridPane>
    </center>
-   <bottom>
-      <GridPane BorderPane.alignment="CENTER">
-        <columnConstraints>
-          <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <ImageView onMouseClicked="#previousUser" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../img/font-awesome_4-7-0_arrow-left_50_0_000000_none.png" />
-               </image>
-               <GridPane.margin>
-                  <Insets right="10.0" />
-               </GridPane.margin>
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor>
-            </ImageView>
-            <ImageView layoutX="210.0" layoutY="10.0" onMouseClicked="#nextUser" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1">
-               <image>
-                  <Image url="@../img/font-awesome_4-7-0_arrow-right_50_0_000000_none.png" />
-               </image>
-               <GridPane.margin>
-                  <Insets left="10.0" />
-               </GridPane.margin>
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor>
-            </ImageView>
-         </children>
-         <opaqueInsets>
-            <Insets />
-         </opaqueInsets>
-         <padding>
-            <Insets top="20.0" />
-         </padding>
-      </GridPane>
-   </bottom>
    <padding>
       <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
    </padding>
@@ -118,4 +78,48 @@
          </right>
       </BorderPane>
    </top>
+   <bottom>
+      <HBox alignment="CENTER" spacing="30.0" BorderPane.alignment="CENTER">
+         <children>
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#firstUser" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../img/angle-double-left-solid.png" />
+               </image>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </ImageView>
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#previousUser" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../img/angle-left-solid.png" />
+               </image>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </ImageView>
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#nextUser" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../img/angle-right-solid.png" />
+               </image>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </ImageView>
+            <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#lastUser" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../img/angle-double-right-solid.png" />
+               </image>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </ImageView>
+         </children>
+         <BorderPane.margin>
+            <Insets />
+         </BorderPane.margin>
+         <padding>
+            <Insets top="20.0" />
+         </padding>
+      </HBox>
+   </bottom>
 </BorderPane>
