--- a/src/main/resources/view/Welcome.fxml
+++ b/src/main/resources/view/Welcome.fxml
@@ -236,7 +236,7 @@
          </font>
       </Label>
       <Hyperlink layoutX="5.0" layoutY="15.0" onAction="#aboutApp" prefWidth="115.0" text="%about_app" wrapText="true" />
-      <Button fx:id="buttonCancelDownload" cancelButton="true" ellipsisString="" layoutX="520.0" layoutY="530.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="100.0" style="-fx-font-size: 16;" stylesheets="@/css/style.css" text="%btn.cancel" visible="false">
+      <Button fx:id="buttonCancelDownload" cancelButton="true" ellipsisString="" layoutX="520.0" layoutY="530.0" mnemonicParsing="false" prefHeight="39.0" style="-fx-font-size: 16;" stylesheets="@/css/style.css" text="%btn.cancel" visible="false">
          <font>
             <Font size="19.0" />
          </font>
